discussion/kv_engine/125919/125919_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Use PointInTime backup for every min 24h

Change-Id: I0f1b686ff8190d087bba3630b371ca346985a35c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-04-16 18:02:12.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-16 18:25:26.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27540/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(1083): error C2660: "cb::couchstore::compact": function does not take 8 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27540/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1723/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1092:13: error: too many arguments to function call, expected 6, have 8 [clang-diagnostic-error]
            oldest.time_since_epoch().count(),
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/couchstore/include/libcouchstore/couch_db.h:1205:1: note: "compact" declared here
LIBCOUCHSTORE_API
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/build-kv_engine-clang-tidy/couchstore/include/libcouchstore/visibility.h:15:33: note: expanded from macro "LIBCOUCHSTORE_API"
#      define LIBCOUCHSTORE_API __attribute__((visibility("default")))
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1723/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1092:13:
error: too many arguments to function call, expected 6, have 8 [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1723/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23549/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1092:13:
error: too many arguments to function call, expected 6, have 8
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23549/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3206/ : FAILURE

Compile error at [2020-04-16T18:22:27.485Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1093:26:
error: too many arguments to function ?couchstore_error_t cb::couchstore::compact(Db&, const char*, couchstore_compact_flags, cb::couchstore::CompactFilterCallback, cb::couchstore::CompactRewriteDocInfoCallback, FileOpsInterface*)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3206/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3136/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11003/ : FAILURE

Compile error at [2020-04-16T18:21:07.674Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1093:26:
error: too many arguments to function ?couchstore_error_t cb::couchstore::compact(Db&, const char*, couchstore_compact_flags, cb::couchstore::CompactFilterCallback, cb::couchstore::CompactRewriteDocInfoCallback, FileOpsInterface*)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11003/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3152/ : FAILURE

Compile error at [2020-04-16T18:19:13.025Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1093:26:
error: too many arguments to function ?couchstore_error_t cb::couchstore::compact(Db&, const char*, couchstore_compact_flags, cb::couchstore::CompactFilterCallback, cb::couchstore::CompactRewriteDocInfoCallback, FileOpsInterface*)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3152/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2195/ : FAILURE

Compile error at [2020-04-16T18:10:37.262Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1092:13:
error: too many arguments to function call, expected 6, have 8
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2195/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/242/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
